--- a/www/composer.json
+++ b/www/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "app/src",
+    "name": "chencsi/phpauth",
     "autoload": {
         "psr-4": {
             "App\\": "src/App"
@@ -10,5 +10,7 @@
             "name": "Chen Kevin"
         }
     ],
-    "require": {}
+    "require": {
+        "filp/whoops": "^2.15"
+    }
 }
