--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -32,5 +32,8 @@ RUN docker-php-ext-install  pdo \
                             pcntl \
                             gd
 
+RUN curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64 \ 
+    && chmod +x tailwindcss-linux-x64 \
+    && mv tailwindcss-linux-x64 /usr/local/bin/tailwindcss
 
 CMD ["php-fpm"]
